# github-playground1

./: .gitignore  README.md  app.py  requirements.txt  setup.cfg
notebooks/: 01_exploratory_analysis.ipynb
src/meddevice/: __init__.py
src/meddevice/data/: __init__.py  preprocessing.py
src/meddevice/models/: __init__.py
src/meddevice/visualization/: __init__.py
static/: style.css
templates/: base.html  cart.html  checkout.html  home.html  order_confirmation.html  product_detail.html  products.html
tests/: conftest.py  test_preprocessing.py
