[metadata]
name = meddevice
version = 0.1.0
description = Data science toolkit for medical device data analysis
author = github-playground1 contributors
license = MIT
python_requires = >=3.9

[options]
package_dir =
    = src
packages = find:

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests

[flake8]
max-line-length = 99
exclude = .git,__pycache__,.venv,build,dist
